--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -1,7 +1,7 @@
 ---  
   title: "Course Schedule and Readings"  
 ---  
-  While the topics covered are broad, each week will feature different examples from genetics, ecology, molecular, and evolutionary biology highlighting uses of each individual set of techniques.    
+  While the topics covered are broad, each week will feature different examples from genetics, ecology, molecular, and evolutionary biology highlighting uses of each individual set of techniques. Each topic will have accompanying readings highlighting a general introduction to a technique (required), and one or more general references or examples. For access to blocked readings, biol609.   
   
     
       
@@ -10,3 +10,9 @@ __Lecture:__ [Why Advanced Data Analysis?](lectures/01_intro.html), [GLM Review]
 __Etherpad:__ https://etherpad.wikimedia.org/p/609-intro  
 __Reading:__ [O'Hara 2009](http://byrneslab.net/classes/biol609/readings/O'Hara_2009_glmm.pdf) through section on GLMs, [O'Hara and Kotze 2010](http://byrneslab.net/classes/biol609/readings/o'hara_and_kotze_do_not_log_transform.pdf), [Wharton and Hui 2011](http://byrneslab.net/classes/biol609/readings/Wharton_Hui_2011_Ecology.pdf), [ver Hoef and Boveng 2007 on overdispersion](http://byrneslab.net/classes/biol609/readings/Ver_Hoef_and_Boveng_qp_neg binomial.pdf), [Hartig DHARMa vignette](https://cran.r-project.org/web/packages/DHARMa/vignettes/DHARMa.html)  
 __Files:__ [Data for GLM Lecture](lectures/02_data.zip)
+
+### Week 2.
+__Lecture:__ [Model II and Quantile Regression](./lectures/03_rma_quantile.Rmd), Robust Regression and Generalised Least Squares\
+__Etherpad:__ https://etherpad.wikimedia.org/p/609-alt_regression  
+__Reading:__ [Warton et al. SMATR](http://byrneslab.net/classes/biol609/readings/Warton_et_al_2012_MEE.pdf), [Warton et al. 2006 Model II Review](http://byrneslab.net/classes/biol609/readings/Warton_et_al-2006-Biological_Reviews.pdf), [Cade and Noon 2003 on Quantile Regression](http://byrneslab.net/classes/biol609/readings/Cade_and_Noon_2003_Quantile.pdf), [Brennen et al. 2015 quantile regression example](http://byrneslab.net/classes/biol609/readings/Brennen_et_al_2015_quantile.pdf)\
+__Files:__ [Elk data](./lectures/data/03/ekk_from_dryad.csv)
