--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -8,11 +8,11 @@
 ### Week 1.  
 __Lecture:__ [Why Advanced Data Analysis?](lectures/01_intro.html), [GLM Review](lectures/02_generalized_linear_models.html)\
 __Etherpad:__ https://etherpad.wikimedia.org/p/609-intro  
-__Reading:__ [O'Hara 2009](http://byrneslab.net/classes/biol609/readings/O'Hara_2009_glmm.pdf) through section on GLMs, [O'Hara and Kotze 2010](http://byrneslab.net/classes/biol609/readings/o'hara_and_kotze_do_not_log_transform.pdf), [Wharton and Hui 2011](http://byrneslab.net/classes/biol609/readings/Wharton_Hui_2011_Ecology.pdf), [ver Hoef and Boveng 2007 on overdispersion](http://byrneslab.net/classes/biol609/readings/Ver_Hoef_and_Boveng_qp_neg binomial.pdf), [Hartig DHARMa vignette](https://cran.r-project.org/web/packages/DHARMa/vignettes/DHARMa.html)  
+__Reading:__ [O'Hara 2009](http://byrneslab.net/classes/biol609/O'Hara_2009_glmm.pdf) through section on GLMs, [O'Hara and Kotze 2010](http://byrneslab.net/classes/biol609/o'hara_and_kotze_do_not_log_transform.pdf), [Wharton and Hui 2011](http://byrneslab.net/classes/biol609/Wharton_Hui_2011_Ecology.pdf), [ver Hoef and Boveng 2007 on overdispersion](http://byrneslab.net/classes/biol609/Ver_Hoef_and_Boveng_qp_neg binomial.pdf), [Hartig DHARMa vignette](https://cran.r-project.org/web/packages/DHARMa/vignettes/DHARMa.html)  
 __Files:__ [Data for GLM Lecture](lectures/02_data.zip)
 
 ### Week 2.
 __Lecture:__ [Model II and Quantile Regression](./lectures/03_rma_quantile.html), Robust Regression and Generalised Least Squares\
 __Etherpad:__ https://etherpad.wikimedia.org/p/609-alt_regression  
-__Reading:__ [Warton et al. SMATR](http://byrneslab.net/classes/biol609/readings/Warton_et_al_2012_MEE.pdf), [Warton et al. 2006 Model II Review](http://byrneslab.net/classes/biol609/readings/Warton_et_al-2006-Biological_Reviews.pdf), [Cade and Noon 2003 on Quantile Regression](http://byrneslab.net/classes/biol609/readings/Cade_and_Noon_2003_Quantile.pdf), [Brennen et al. 2015 quantile regression example](http://byrneslab.net/classes/biol609/readings/Brennen_et_al_2015_quantile.pdf)\
+__Reading:__ [Warton et al. SMATR](http://byrneslab.net/classes/biol609/Warton_et_al_2012_MEE.pdf), [Warton et al. 2006 Model II Review](http://byrneslab.net/classes/biol609/Warton_et_al-2006-Biological_Reviews.pdf), [Cade and Noon 2003 on Quantile Regression](http://byrneslab.net/classes/biol609/Cade_and_Noon_2003_Quantile.pdf), [Brennen et al. 2015 quantile regression example](http://byrneslab.net/classes/biol609/Brennen_et_al_2015_quantile.pdf)\
 __Files:__ [Elk data](./lectures/data/03/ekk_from_dryad.csv)
