--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -24,5 +24,5 @@ __Files:__ [Elk data](./lectures/data/03/ekk_from_dryad.csv), [Clam data](./lect
 ### Week 3.
 __Lecture:__ [Temporal Autocorrelation](05_temporal_autocorrelation.html)\
 __Etherpad:__ https://etherpad.wikimedia.org/p/609-autocorrelation  
-__Reading:__ [Zuur et al. on temporal autocorrelation]((http://byrneslab.net/classes/biol609/Zuur_ch_6_temporal.pdf)\
+__Reading:__ [Zuur et al. on temporal autocorrelation](http://byrneslab.net/classes/biol609/Zuur_ch_6_temporal.pdf)\
 __Files:__ 
