--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -24,5 +24,5 @@ __Files:__ [Elk data](./lectures/data/03/ekk_from_dryad.csv), [Clam data](./lect
 ### Week 3.
 __Lecture:__ [Temporal Autocorrelation](05_temporal_autocorrelation.html)\
 __Etherpad:__ https://etherpad.wikimedia.org/p/609-autocorrelation  
-__Reading:__ [Zuur et al. on temporal autocorrelation](http://byrneslab.net/classes/biol609/Zuur_ch_6_temporal.pdf)\
+__Reading:__ [Zuur et al. on temporal autocorrelation](http://byrneslab.net/classes/biol609/Zuur_ch_6_temporal.pdf). [Why OLS is an Unbiased Estimator for GLS](https://dynamicecology.wordpress.com/2012/09/24/why-ols-estimator-is-an-unbiased-estimator-for-gls/)\
 __Files:__ 
