--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -4,7 +4,7 @@
   While the topics covered are broad, each week will feature different examples from genetics, ecology, molecular, and evolutionary biology highlighting uses of each individual set of techniques. Each topic will have accompanying readings highlighting a general introduction to a technique (required), and one or more general references or examples. For access to blocked readings, biol609.   
 \
 To see the code of a lecture, load the slides, then change the file extension in your browser bar to .Rmd to get the code. Or go to [this link](https://github.com/biol609/biol609.github.io/tree/master/lectures) for all of the code.
-
+  
   
     
       
@@ -13,16 +13,60 @@ __Lecture:__ [Why Advanced Data Analysis?](lectures/01_intro.html), [GLM Review]
 __Etherpad:__ https://etherpad.wikimedia.org/p/609-intro  
 __Reading:__ [O'Hara 2009](http://byrneslab.net/classes/biol609/O'Hara_2009_glmm.pdf) through section on GLMs, [O'Hara and Kotze 2010](http://byrneslab.net/classes/biol609/o'hara_and_kotze_do_not_log_transform.pdf), [Wharton and Hui 2011](http://byrneslab.net/classes/biol609/Wharton_Hui_2011_Ecology.pdf), [ver Hoef and Boveng 2007 on overdispersion](http://byrneslab.net/classes/biol609/Ver_Hoef_and_Boveng_qp_neg binomial.pdf), [Hartig DHARMa vignette](https://cran.r-project.org/web/packages/DHARMa/vignettes/DHARMa.html)  
 __Files:__ [Data for GLM Lecture](lectures/02_data.zip)
-
+  
 ### Week 2.
 __Lecture:__ [Model II and Quantile Regression](./lectures/03_rma_quantile.html), [Generalised Least Squares](./lectures/04_gls.html)\
 __Etherpad:__ https://etherpad.wikimedia.org/p/609-alt_regression  
 __Reading:__ [Warton et al. SMATR](http://byrneslab.net/classes/biol609/Warton_et_al_2012_MEE.pdf), [Warton et al. 2006 Model II Review](http://byrneslab.net/classes/biol609/Warton_et_al-2006-Biological_Reviews.pdf), [Cade and Noon 2003 on Quantile Regression](http://byrneslab.net/classes/biol609/Cade_and_Noon_2003_Quantile.pdf), [Brennen et al. 2015 quantile regression example](http://byrneslab.net/classes/biol609/Brennen_et_al_2015_quantile.pdf), [Colonescu Ch. 8 on Heteroskedasticity](https://bookdown.org/ccolonescu/RPoE4/heteroskedasticity.html)\
 __Files:__ [Elk data](./lectures/data/03/ekk_from_dryad.csv), [Clam data](./lectures/data/04/Clams.txt)
-
-
+  
+  
 ### Week 3.
 __Lecture:__ [Temporal Autocorrelation](lectures/05_timeseries.html)\
 __Etherpad:__ https://etherpad.wikimedia.org/p/609-autocorrelation  
-__Reading:__ [Zuur et al. on temporal autocorrelation](http://byrneslab.net/classes/biol609/Zuur_ch_6_temporal.pdf), [Why OLS is an Unbiased Estimator for GLS](https://dynamicecology.wordpress.com/2012/09/24/why-ols-estimator-is-an-unbiased-estimator-for-gls/)\
-__Files:__ [Birds](./lectures/data/05/allbirds.csv), [Plankton](./lectures/data/05/planktonMeans.csv)
+__Reading:__ [Zuur et al. on temporal autocorrelation](http://byrneslab.net/classes/biol609/Zuur_ch_6_temporal.pdf), [Why OLS is an Unbiased Estimator for GLS](https://dynamicecology.wordpress.com/2012/09/24/why-ols-estimator-is-an-unbiased-estimator-for-gls/), [Zuur et al. on spatial autocorrelation](http://byrneslab.net/classes/biol609/Zuur_ch_7_space.pdf), [Hawkings on the 8 1/2 deadly sins of spatial data analysis](http://byrneslab.net/classes/biol609/hawkins_2011_spatial.pdf)\
+__Files:__ [Birds](./lectures/data/05/allbirds.csv), [Plankton](./lectures/data/05/planktonMeans.csv)  
+  
+### Week 4.
+__Lecture:__ Random Effects, Mixed Models
+  
+### Week 5.
+__Lecture:__ Intro to Structural Equation Models  
+  
+### Week 6. 
+__Lecture__: Re-Introduction to Bayesian Techniques  
+__Reading:__ McElreath Ch. 1-3
+  
+### Week 7. 
+__Lecture:__ Linear and multivariate Bayesian Models  
+__Reading:__ McElreath Chapter 4-5
+  
+### Week 8. 
+__Lecture:__ Interaction Effects and Bayesian Model Selection  
+__Reading:__ McElreath Chapter 6-7
+  
+### Week 9. 
+__Lecture:__ Markov Chain Monte-Carlo Approaches  
+__Reading:__ McElreath Chapter 8
+  
+### Week 10. 
+__Lecture__: Generalized Linear Models in a Bayesian Framework  
+__Reading:__ McElreath Chapter 9-10
+  
+### Week 11. 
+__Lecture:__ Overdispersed and Mixture Models  
+__Reading:__ McElreath Chapter 11
+  
+### Week 12. 
+__Lecture:__ Mixed Models in a Bayesian Context  
+__Reading:__ McElreath Chapter 11
+  
+### Week 13. 
+__Lecture:__ Revisiting Autocorrelation and Missing Data  
+__Reading:__ McElreath Chapter 13-14
+  
+### Week 14. 
+__Lecture:__ Open Lab  
+  
+### Week 15.
+__Lecture:__ Final Presentations
