--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -22,10 +22,10 @@ __Files:__ [Elk data](./lectures/data/03/ekk_from_dryad.csv), [Clam data](./lect
   
   
 ### Week 3.
-__Lecture:__ [Temporal Autocorrelation](lectures/05_timeseries.html)\
+__Lecture:__ [Temporal Autocorrelation](lectures/05_timeseries.html), [Spatial Autocorrelation](lectures/06_spatial.html)\
 __Etherpad:__ https://etherpad.wikimedia.org/p/609-autocorrelation  
 __Reading:__ [Zuur et al. on temporal autocorrelation](http://byrneslab.net/classes/biol609/Zuur_ch_6_temporal.pdf), [Why OLS is an Unbiased Estimator for GLS](https://dynamicecology.wordpress.com/2012/09/24/why-ols-estimator-is-an-unbiased-estimator-for-gls/), [Zuur et al. on spatial autocorrelation](http://byrneslab.net/classes/biol609/Zuur_ch_7_space.pdf), [Hawkings on the 8 1/2 deadly sins of spatial data analysis](http://byrneslab.net/classes/biol609/hawkins_2011_spatial.pdf)\
-__Files:__ [Birds](./lectures/data/05/allbirds.csv), [Plankton](./lectures/data/05/planktonMeans.csv)  
+__Files:__ [Birds](./lectures/data/05/allbirds.csv), [Plankton](./lectures/data/05/planktonMeans.csv), [Boreal Forests](./lectures/data/06/Boreality.txt), [Irish EPA Data](./lectures/data/06/SDI2003.txt)  
   
 ### Week 4.
 __Lecture:__ Random Effects, Mixed Models
