--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -29,9 +29,11 @@ __Files:__ [Birds](./lectures/data/05/allbirds.csv), [Plankton](./lectures/data/
   
 ### Week 4.
 __Lecture:__ Random Effects, Mixed Models  
+__Etherpad:__ https://etherpad.wikimedia.org/p/609-ranef  
 __Reading:__ [Gelman and Hill Ch. 12](http://byrneslab.net/classes/biol609/gelman_hill_ch_12.pdf) and/or [Zuur on Random Effects](http://byrneslab.net/classes/biol609/Zuur_ch_5.pdf)  
 __Writings on visualization:__ <a href="http://strengejacke.wordpress.com/2014/10/26/visualizing-generalized-linear-mixed-effects-models-with-ggplot-rstats-lme4/">Visualizing Mixed Models part 1</a>, <a href="http://strengejacke.wordpress.com/2014/11/18/visualizing-generalized-linear-mixed-effects-models-part-2-rstats-lme4/">Visualizing Mixed Models part 2</a>, <a href="http://cran.r-project.org/web/packages/sjPlot/index.html">sjPlot</a>, <a href="http://anythingbutrbitrary.blogspot.com/2012/06/random-regression-coefficients-using.html">Random regression coefficients using lme4</a>, <a href="http://stackoverflow.com/questions/13847936/in-r-plotting-random-effects-from-lmer-lme4-package-using-qqmath-or-dotplot">Making mixed model plots look fancy</a>  
 __A Little More Reading:__ <a href="http://jonlefcheck.net/2013/03/13/r2-for-linear-mixed-effects-models/">R<sup>2</sup> for mixed models (from Jon Lefcheck)</a>  
+
 
 ### Week 5.
 __Lecture:__ Intro to Structural Equation Models  
