--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -39,7 +39,8 @@ __Files:__ [Mussels](./lectures/data/07/mussels.csv), [Uneven  Mussels](./lectur
 __R Packages:__ lme4, lmerTest, [merTools](https://github.com/jknowles/merTools), sjplot, RLRsim, cAIC4  
 
 ### Week 5.
-__Lecture:__ Intro to Structural Equation Models  
+__Lecture:__ [Intro to Structural Equation Models](https://1drv.ms/p/s!AvOIsObbweOroNIqHiVxra6SIrp4gw)  
+__Etherpad:__ https://etherpad.wikimedia.org/p/609-sem  
   
 ### Week 6. 
 __Lecture__: Re-Introduction to Bayesian Techniques  
