--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -45,8 +45,10 @@ __Reading:__ [Grace et al 2012 Ecosphere](http://byrneslab.net/classes/biol609/G
 __R packages:__ piecewiseSEM  
 
 ### Week 6. 
-__Lecture__: Re-Introduction to Bayesian Techniques  
-__Reading:__ McElreath Ch. 1-3
+__Lecture__: [Re-Introduction to Bayesian Logic](./lectures/11_bayes_reintro.html) and Sampling  
+__Reading:__ McElreath Ch. 1-3  
+__Etherpad:__ https://etherpad.wikimedia.org/p/609-bayes  
+
   
 ### Week 7. 
 __Lecture:__ Linear and multivariate Bayesian Models  
