--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -45,7 +45,7 @@ __Reading:__ [Grace et al 2012 Ecosphere](http://byrneslab.net/classes/biol609/G
 __R packages:__ piecewiseSEM  
 
 ### Week 6. 
-__Lecture__: [Re-Introduction to Bayesian Logic](./lectures/11_bayes_reintro.html) and Sampling  
+__Lecture__: [Re-Introduction to Bayesian Logic](./lectures/11_bayes_reintro.html) and [Sampling](./lectures/12_posterior_sampling.html)  
 __Reading:__ McElreath Ch. 1-3  
 __Etherpad:__ https://etherpad.wikimedia.org/p/609-bayes  
 
