fixed nb explanations

--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -72,7 +72,7 @@ __Reading:__ McElreath Chapter 9-10
   
 ### Week 11. 
 __Lecture:__ [Gamma and Zero Inflated Models](./lectures/20_zinfl.Rmd), Overdispersed Mixture Models  
-__Reading:__ McElreath Chapter 11  
+__Reading:__ McElreath Chapter 11, [fitting Gamma models multiple ways](http://seananderson.ca/2014/04/08/gamma-glms.html), [Gamma hurdle model](http://seananderson.ca/2014/05/18/gamma-hurdle.html)  
 __Files:__ [Fishing Duration CSV](./lectures/data/20/fishing_duration.csv)  
 __Etherpad:__ https://etherpad.wikimedia.org/p/609-zig_zag    
 
