--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -84,7 +84,8 @@ __Reading:__ McElreath Chapter 12, 13
 __Additional Reading:__ [Gelman and Hill Ch. 12](http://byrneslab.net/classes/biol609/gelman_hill_ch_12.pdf) (see the bit on one model written 5 ways), [Gelman and Hill Ch. 13](http://byrneslab.net/classes/biol609/gelman_hill_ch_13.pdf), [Gelman on multiple comparisons in mixed models](http://byrneslab.net/classes/biol609/Gelman_multcomp.pdf)
   
 ### Week 13. 
-__Lecture:__ Gaussian Proces Models and Rethinking Alternatives  
+__Lecture:__ [Gaussian Proces Models](./lectures/24_gaussian_process.html) and Rethinking Alternatives  
+__Files:__ [predicted GP script](./data/gp/predict_gpl2.R)  
 __Reading:__ McElreath Chapter 14, [Roberts et al. 2012](http://byrneslab.net/classes/biol609/Roberts_et_al_2012_gaussian_process.pdf)  
   
 ### Week 14. 
